--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-terser": "^0.4.4",
+        "rollup-plugin-copy": "3.5.0",
         "eslint": "^9.22.0",
         "npm-run-all": "^4.1.5",
         "rollup": "^4.36.0",
